force-app/main/default/objects/C360_Bidder__c.object
<CustomObject>
    <fields>
        <fullName>CommentTracking__c</fullName>
        <label>Comment Tracking</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bidder</relationshipLabel>
        <relationshipName>Bidder</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OfferedAmount__c</fullName>
        <label>Offered Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OfferedVolume__c</fullName>
        <label>Offered Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>C360_Opportunity__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Customer Bidding</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>C360_Opportunity__c</referenceTo>
        <relationshipLabel>Bidder</relationshipLabel>
        <relationshipName>Bidder</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit</label>
        <referenceTo>C360_UnitConversion__c</referenceTo>
        <relationshipLabel>Bidder</relationshipLabel>
        <relationshipName>Bidder</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Bidder</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BD{0000000}</displayFormat>
        <label>Bidder Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>OpportunityNameCannotEdit</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    NOT(ISNEW()),
    ISCHANGED(Opportunity__c)
)</errorConditionFormula>
        <errorDisplayField>Opportunity__c</errorDisplayField>
        <errorMessage>คุณไม่สามารถแก้ไขชื่อ Opportunity ได้</errorMessage>
    </validationRules>
</CustomObject>